# cython-editable-bug

./: README.md  pixi.toml
deppkg/: pyproject.toml
deppkg/deppkg/: test.pxd  test.pyx
mainpkg/: pyproject.toml
mainpkg/mainpkg/: test.pyx
